blockchain_integration/pi_network/Infrastructure/kubernetes/deployment-rolling-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-network
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pi-network
  template:
    metadata:
      labels:
        app: pi-network
    spec:
      containers:
      - name: pi-network
        image: pi-network:latest
        ports:
        - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
