blockchain_integration/pi_network/Infrastructure/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-network
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pi-network
  template:
    metadata:
      labels:
        app: pi-network
    spec:
      containers:
      - name: pi-network
        image: pi-network:latest
        ports:
        - containerPort: 8080
      - name: db
        image: postgres:12
        ports:
        - containerPort: 5432
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
