blockchain_integration/pi_network/Infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-network-ingress
spec:
  rules:
  - host: pi-network.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: pi-network
          servicePort: 8080
